--- a/src/App.css
+++ b/src/App.css
@@ -284,7 +284,7 @@ body{
 
  .resumen{
   margin: -20px;
-  padding: 10px;
+  padding: 10px 0 10px 0;
   width: 100%;
   flex-grow: 1;
   padding-bottom: 10px;
